# Tcp-Ip-Server-in-C-

Network/: CMakeLists.txt
Network/Client/: CMakeLists.txt  main.cpp
Network/Networking/: CMakeLists.txt
Network/Networking/include/Network/Client/: Tcp_Client.h
Network/Networking/include/Network/server/: Tcp.h  Tcp_Connection.h
Network/Networking/src/Client/: Tcp_Client.cpp
Network/Networking/src/server/: Tcp.cpp  Tcp_Connection.cpp
Network/Server/: CMakeLists.txt  main.cpp
